syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";
option go_package="github.com/xiaowuzai/simplebank/pb";

message LoginUserRequest {
	string username = 1;
	string password = 2;
}

message LoginUserResponse {
	User user = 1;
	string    session_id = 2;
	string       token=3;
	string       refresh_token=4;
	google.protobuf.Timestamp    token_expired_at=5;
	google.protobuf.Timestamp   refresh_token_expired_at=6;
}