syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "rpc_create_user.proto";
import "rpc_login_user.proto";

option go_package="github.com/xiaowuzai/simplebank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple Bank API";
    version: "1.0";
    contact: {
      name: "gRPC-Gateway project";
      url: "https://github.com/grpc-ecosystem/grpc-gateway";
      email: "none@example.com";
    };
  };
};

service SimpleBank {
	rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
		option (google.api.http) = {
			post: "/v1/create_user"
			body: "*"
		};
	}
	rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
		option (google.api.http) = {
			post: "/v1/login_user"
			body: "*"
		};
	}
}